--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "2246e323-1d78-4763-b028-ab1397cb922f"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
