--- a/angular.json
+++ b/angular.json
@@ -1,12 +1,12 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
   "cli": {
-    "analytics": "2246e323-1d78-4763-b028-ab1397cb922f"
+    "analytics": "700b76f0-3687-40e4-a4e2-6680fe5e9fbe"
   },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "atividadeangular": {
+    "banco1": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -23,7 +23,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/atividadeangular",
+            "outputPath": "dist/banco1",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -34,6 +34,7 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
               "src/styles.scss"
             ],
             "scripts": []
@@ -71,18 +72,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "atividadeangular:build"
+            "browserTarget": "banco1:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "atividadeangular:build:production"
+              "browserTarget": "banco1:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "atividadeangular:build"
+            "browserTarget": "banco1:build"
           }
         },
         "test": {
@@ -97,6 +98,7 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
               "src/styles.scss"
             ],
             "scripts": []
@@ -119,16 +121,16 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "atividadeangular:serve"
+            "devServerTarget": "banco1:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "atividadeangular:serve:production"
+              "devServerTarget": "banco1:serve:production"
             }
           }
         }
       }
     }
   },
-  "defaultProject": "atividadeangular"
+  "defaultProject": "banco1"
 }
